responsive errors being fixed

--- a/_includes/actividades.html
+++ b/_includes/actividades.html
@@ -3,26 +3,26 @@
 
 		<h2 class="actividades-titulo"><b>Atividades que temos preparadas para ti!</b></h2>
 	
-		<div class="actividades-text-container col-md-4">
+		<div class="actividades-text-container col-sm-4">
 			<h2 class="actividades-text">Palestras e workshops</h2>
 			
-			<h1><i class="fa fa-comments-o fa-4x" aria-hidden="true"></i></h1>
+			<h1><i class="fa fa-comments-o fa-4x actividades-icon" aria-hidden="true"></i></h1>
 			
 			<h4 class="actividades-descricao">Aparece nas palestras ao longo da semana e aprende connosco.</h4> 
 		</div>
 	
-		<div class="actividades-text-container col-md-4">
-			<h2 class="actividades-text-text">Desafio Algoritmico</h2>
+		<div class="actividades-text-container col-sm-4">
+			<h2 class="actividades-text">Desafio Algoritmico</h2>
 							
-			<h1><i class="fa fa-code fa-4x" aria-hidden="true"></i></h1>
+			<h1><i class="fa fa-code fa-4x actividades-icon" aria-hidden="true"></i></h1>
 				
 			<h4 class="actividades-descricao">Concurso de programação a decorrer durante toda a semana, carrega aqui para saberes mais!</h4>
 		</div>
 	
-		<div class="actividades-text-container col-md-4">
-			<h2 class="actividades-text-text">Dia no DI</h2>
+		<div class="actividades-text-container col-sm-4">
+			<h2 class="actividades-text">Dia no DI</h2>
 
-			<h1><i class="fa fa-desktop fa-4x" aria-hidden="true"></i></h1>
+			<h1><i class="fa fa-desktop fa-4x actividades-icon" aria-hidden="true"></i></h1>
 			
 			<h4 class="actividades-descricao">Passa um dia inteiro conosco, quer sejas do primeiro ano ou estejas a acabar a tua tese e queiras relaxar um pouco, temos o que procuras!</h4>
 		</div>
