--- a/css/home.css
+++ b/css/home.css
@@ -15,12 +15,12 @@
 	bottom: 100px;
 	margin-left: 200px;
 	position: absolute;
-	height: 25%;
+	height: 160px;
 }
 
 .home-floor1{
 	position: absolute;
-	bottom: -3%;
+	bottom: -30px;
 	width: 100%;
 	height: 60px;
 }
@@ -43,8 +43,8 @@
 .home-castelo{
 	position: absolute;
 	bottom: 20px;
-	margin-left: 75%;
-	height: 40%;
+	margin-left: 1200px;
+	height: 200px;
 }
 
 
@@ -58,15 +58,15 @@
 .home-lilcloud{
 	position: absolute;
 	margin-top: 410px;
-	margin-left: 13%;
-	height: 15%;
+	margin-left: 130px;
+	height: 150px;
 }
 
 .home-bigcloud{
 	position: absolute;
 	margin-top: 150px;
-	margin-left: 55%;
-	height: 15%;
+	margin-left: 550px;
+	height: 150px;
 }
 
 
@@ -74,22 +74,22 @@
 	color:#eaeaea;
 	position: absolute;
 	margin-top: 570px;
-	margin-left: 9%;
+	margin-left: 90px;
 }
 
 @media (max-width: 1690px){
 
 #home-section{
-	height: 800px;
+	height: 650px;
 }
 
 
 .home-mario{
-	bottom: 150px;
+	bottom: 60px;
 }
 
 .home-floor1{
-	bottom: 8%;
+	bottom: -10px;
 	height: 55px;
 }
 
@@ -97,35 +97,41 @@
 .home-code{
 	margin-top: 170px;
 	margin-left: 150px;
-	height: 13%;
+	height: 100px;
 }
 
 .home-week{
-	margin-top: 360px;
+	margin-top: 340px;
 	margin-left: 300px;
-	height: 13%;
+	height: 100px;
 }
 
 .home-castelo{
-	bottom: 120px;
-	height: 30%;
+	bottom: 40px;
+	height: 300px;
+	margin-left: 950px;
 }
 
 
 .home-di{
-	margin-top: 360px;
-	margin-left: 900px;
-	height: 13%;
+	margin-top: 340px;
+	margin-left: 830px;
+	height: 100px;
 }
 
 .home-lilcloud{
-	margin-top: 400px;
-	margin-left: 11%;
-	height: 13%;
+	margin-top: 330px;
+	margin-left: 100px;
+	height: 120px;
 }
 
 .home-bigcloud{
-	height: 13%;
+	height: 120px;
+	margin-left: 600px;
+}
+.home-text{
+	margin-top: 450px;
+	margin-left: 150px;
 }
 
 
@@ -135,46 +141,60 @@
 
 
 
-@media (max-width: 1150px){
+@media (max-width: 1230px){
 
-
+#home-section{
+	height: 640px;
+}
 
 .home-code{
 	margin-left: 100px;
-	height: 10%;
+	height: 100px;
 }
 
 .home-week{
 	margin-top: 340px;
 	margin-left: 200px;
-	height: 10%;
+	height: 100px;
 }
 
 .home-castelo{
-	height: 25%;
-	bottom: 100px;
+	height: 200px;
+	bottom: 35px;
+	margin-left: 800px;
 }
 
 
 .home-di{
 	margin-top: 340px;
-	margin-left: 650px;
-	height: 10%;
+	margin-left: 700px;
+	height: 100px;
 }
 
 .home-lilcloud{
-	margin-top: 380px;
-	margin-left: 9%;
-	height: 13%;
+	margin-top: 360px;
+	margin-left: 80px;
+	height: 100px;
+}
+
+.home-bigcloud{
+	margin-top: 170px;
+	margin-left: 500px;
+	height: 100px;
 }
 
 .home-floor1{
-	bottom: 8%;
+	bottom: 0;
 	height: 40px;
 }
 
 .home-mario{
-	height: 17%;
+	height: 120px;
+	bottom: 40px;
+}
+
+.home-text{
+	margin-top: 490px;
 }
 
 
@@ -183,126 +203,70 @@
 
 
 
-@media (max-width: 950px){
+@media (max-width: 1000px){
 
 
 #home-section{
-	height: 700px;
-}
-
-.home-code{
-	margin-left: 100px;
-	height: 10%;
-}
-
-.home-week{
-	margin-top: 340px;
-	margin-left: 200px;
-	height: 10%;
-}
-
-.home-castelo{
-	height: 20%;
-	margin-left: 65%;
-	bottom: 200px;
-}
-
-
-.home-di{
-	margin-top: 340px;
-	margin-left: 650px;
-	height: 10%;
-}
-
-.home-lilcloud{
-	margin-top: 340px;
-	margin-left: 6%;
-	height: 10%;
-}
-
-.home-bigcloud{
-	height: 10%;
-}
-
-.home-floor1{
-	bottom: 20%;
-	height: 30px;
-}
-
-.home-mario{
-	height: 15%;
-	bottom: 220px;
-}
-
-
-
-
-}
-
-
-
-
-
-@media (max-width: 830px){
-
-
-#home-section{
-	height: 650px;
+	height: 550px;
 }
 
 .home-code{
 	margin-left: 80px;
-	height: 7%;
+	height: 90px;
 }
 
 .home-week{
-	margin-top: 270px;
+	margin-top: 310px;
 	margin-left: 180px;
-	height: 7%;
+	height: 90px;
 }
 
 .home-castelo{
-	height: 15%;
-	margin-left: 65%;
-	bottom: 245px;
+	height: 130px;
+	margin-left: 530px;
+	bottom: 110px;
 }
 
 
 .home-di{
-	margin-top: 270px;
-	margin-left: 500px;
-	height: 7%;
+	margin-top: 310px;
+	margin-left: 650px;
+	height: 90px;
 }
 
 .home-lilcloud{
-	margin-top: 270px;
-	margin-left: 6%;
-	height: 10%;
+	margin-top: 320px;
+	margin-left: 40px;
+	height: 80px;
 }
 
 .home-bigcloud{
-	height: 10%;
+	height: 80px;
 }
 
 .home-floor1{
-	bottom: 25%;
+	bottom: 90px;
 	height: 30px;
 }
 
 .home-mario{
-	height: 15%;
-	bottom: 260px;
+	height: 100px;
+	bottom: 120px;
+}
+
+
+.home-text{
+	margin-top: 430px;
+	font-size: 15px;
+	margin-left: 180px
 }
 
 
 
-
 }
 
 
-
-
-@media (max-width: 630px){
+@media (max-width: 770px){
 
 
 #home-section{
@@ -312,60 +276,101 @@
 .home-code{
 	margin-top: 150px;
 	margin-left: 40px;
-	height: 5%;
+	height: 70px;
 }
 
 .home-week{
-	margin-top: 230px;
+	margin-top: 250px;
 	margin-left: 140px;
-	height: 5%;
+	height: 70px;
 }
 
 .home-castelo{
-	height: 15%;
-	margin-left: 65%;
-	bottom: 390px;
+	height: 150px;
+	margin-left: 480px;
+	bottom: 150px;
 }
 
 
 .home-di{
-	margin-top: 230px;
-	margin-left: 380px;
-	height: 5%;
+	margin-top: 250px;
+	margin-left: 490px;
+	height: 70px;
 }
 
 .home-lilcloud{
 	margin-top: 270px;
-	margin-left: 6%;
-	height: 5%;
+	margin-left: 40px;
+	height: 80px;
 }
 
 .home-bigcloud{
-	height: 5%;
+	height: 80px;
+	margin-left: 330px;
+	margin-top: 150px;
 }
 
 .home-floor1{
-	bottom: 43%;
-	height: 20px;
+	bottom: 140px;
+	height: 25px;
 }
 
 .home-mario{
-	height: 10%;
-	bottom: 400px;
+	height: 85px;
+	bottom: 165px;
 	margin-left: 100px;
 }
 
+.home-text{
+	margin-left: 80px;
+	margin-top: 400px;
+}
 
 
 
 }
 
 
+@media (max-width: 645px){
+
+
+#home-section{
+	height: 485px;
+}
+
+.home-code{
+	height: 60px;
+}
+
+.home-week{
+	height: 60px;
+	margin-left: 120px;
+}
+
+.home-di{
+	height: 60px;
+	margin-left: 430px;
+}
+
+.home-floor1{
+	bottom: 135px;
+}
+
+.home-bigcloud{
+	margin-left: 300px;
+}
+
+
+.home-castelo{
+	margin-left: 400px;
+}
+
+}
 
 
 
 
-@media (max-width: 485px){
+@media (max-width: 555px){
 
 
 #home-section{
@@ -375,50 +380,121 @@
 .home-code{
 	margin-top: 100px;
 	margin-left: 40px;
-	height: 3%;
+	height: 50px;
 }
 
 .home-week{
-	margin-top: 150px;
+	margin-top: 170px;
 	margin-left: 100px;
-	height: 3%;
+	height: 50px;
 }
 
 .home-castelo{
-	height: 10%;
-	margin-left: 65%;
-	bottom: 590px;
+	height: 80px;
+	margin-left: 300px;
+	bottom: 340px;
 }
 
 
 .home-di{
-	margin-top: 150px;
-	margin-left: 240px;
-	height: 3%;
+	margin-top: 170px;
+	margin-left: 360px;
+	height: 50px;
 }
 
 .home-lilcloud{
-	margin-top: 140px;
-	margin-left: 6%;
-	height: 3%;
+	margin-top: 160px;
+	margin-left: 20px;
+	height: 50px;
 }
 
 .home-bigcloud{
-	height: 3%;
+	height: 50px;
 	margin-top: 110px;
 }
 
 .home-floor1{
-	bottom: 66%;
-	height: 15px;
+	bottom: 323px;
+	height: 20px;
 }
 
 .home-mario{
-	height: 5%;
-	bottom: 600px;
+	height: 60px;
+	bottom: 345px;
 	margin-left: 80px;
 }
 
+.home-text{
+	margin-top: 220px;
+	font-size: 10px;
+	margin-left: 65px; 
+}
+
+
+
+}
+
+
+@media (max-width: 520px){
+
+
+#home-section{
+	height: 300px;
+}
+
+.home-code{
+	margin-top: 120px;
+	margin-left: 40px;
+	height: 30px;
+}
+
+.home-week{
+	margin-top: 170px;
+	margin-left: 100px;
+	height: 30px;
+}
+
+.home-castelo{
+	height: 70px;
+	margin-left: 200px;
+	bottom: 340px;
+}
+
+
+.home-di{
+	margin-top: 170px;
+	margin-left: 260px;
+	height: 30px;
+}
+
+.home-lilcloud{
+	margin-top: 160px;
+	margin-left: 20px;
+	height: 50px;
+}
+
+.home-bigcloud{
+	height: 50px;
+	margin-top: 110px;
+	margin-left: 150px;
+}
+
+.home-floor1{
+	bottom: 323px;
+	height: 20px;
+}
+
+.home-mario{
+	height: 60px;
+	bottom: 345px;
+	margin-left: 80px;
+}
+
+.home-text{
+	margin-top: 220px;
+	font-size: 10px;
+	margin-left: 65px; 
+}
 
 
 
