updated e di goes retro added

--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -2,42 +2,42 @@
 <section id="navbar-section"> 
   <a href="/index.html">
     <div class="navbar-block">
-      <h2 class="navbar-text">Desafio</h2>
+      <h2 class="navbar-text">Desafio<br>Algoritmico</h2>
     </div>
   </a>
-  <a href="/index.html">
+  <a href="#agenda-color-A">
     <div class="navbar-block">
-      <h2 class="navbar-text">Sabado</h2>
+      <h2 class="navbar-text">Sábado <br>15</h2>
     </div>
   </a>
-  <a href="/index.html">
+  <a href="#agenda-color-B">
     <div class="navbar-block">
-      <h2 class="navbar-text">Segunda</h2>
+      <h2 class="navbar-text">Segunda <br>17</h2>
     </div>
   </a>
-  <a href="/index.html">
+  <a href="#agenda-color-C">
     <div class="navbar-block">
-      <h2 class="navbar-text">Terça</h2>
+      <h2 class="navbar-text">Terça <br>18</h2>
     </div>
   </a>
-  <a href="/Atividades">
+  <a href="#agenda-color-D">
     <div class="navbar-block">
-      <h2 class="navbar-text">Quarta</h2>
+      <h2 class="navbar-text">Quarta <br>19</h2>
     </div>
   </a>
-  <a href="/Agenda">
+  <a href="#agenda-color-E">
     <div class="navbar-block">
-      <h2 class="navbar-text">Quinta</h2>
+      <h2 class="navbar-text">Quinta <br>20</h2>
     </div>
   </a>
-  <a href="/index.html">
+  <a href="#agenda-color-F">
     <div class="navbar-block">
-      <h2 class="navbar-text">Sexta</h2>
+      <h2 class="navbar-text">Sexta <br>21</h2>
     </div>
   </a>
-  <a href="/index.html">
+  <a href="#agenda-color-G">
     <div class="navbar-block">
-      <h2 class="navbar-text">Sabado</h2>
+      <h2 class="navbar-text">Sabado <br>22</h2>
     </div>
   </a>
 </section>
