--- a/_includes/head.html
+++ b/_includes/head.html
@@ -36,3 +36,4 @@
 <link type="text/css" rel="stylesheet" href="css/parcerias.css">
 <link type="text/css" rel="stylesheet" href="css/footer.css">
 <link type="text/css" rel="stylesheet" href="css/actividades.css">
+<link type="text/css" rel="stylesheet" href="css/retro.css">
