update & fixed images

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -8,6 +8,6 @@
 			<p>Junta te a nós para 6 dias de atividades completamente gratis junto do teu centro de estudantes.
 			De 15 a 23 de Outobro, a tua agenda passa pela CodeWeek@DI.</p>
 			</h3>
-			<img class="about-pic" src="/img/codeWeekLogo.png"/>
+			<img class="about-pic" src="img/codeWeekLogo.png"/>
 		</div>
 </section>
