--- a/_includes/home.html
+++ b/_includes/home.html
@@ -1,12 +1,12 @@
 <section id="home-section">
 	
-	<img src="img/codetitle.png" class="home-code"/>
-	<img src="img/weektitle.png" class="home-week"/>
-	<img src="img/dititle.png" class="home-di"/>
-	<img src="img/mario.png" class="home-mario"/>
-	<img src="img/castelo.png" class="home-castelo"/>
-	<img src="img/lilcloud.png" class="home-lilcloud"/>
-	<img src="img/bigcloud.png" class="home-bigcloud"/>
+	<img src="img/home/codetitle.png" class="home-code"/>
+	<img src="img/home/weektitle.png" class="home-week"/>
+	<img src="img/home/dititle.png" class="home-di"/>
+	<img src="img/home/mario.png" class="home-mario"/>
+	<img src="img/home/castelo.png" class="home-castelo"/>
+	<img src="img/home/lilcloud.png" class="home-lilcloud"/>
+	<img src="img/home/bigcloud.png" class="home-bigcloud"/>
 	<h2 class="home-text"> by: </h2>
-	<img src="img/floor.png" class="home-floor1"/>
+	<img src="img/home/floor.png" class="home-floor1"/>
 </section>
