--- a/_includes/agenda.html
+++ b/_includes/agenda.html
@@ -21,7 +21,7 @@
 				<h4 class="col-md-7 agenda-detalhes"> {{ act.place }} - {{ act.time }} </h4>
 			</div>
 			<div class="col-md-3">
-				<img src="img/{{ act.image }}" class="agenda-pic"/>
+				<img src="img/activities/{{ act.image }}" class="agenda-pic"/>
 			</div>
 		{% endfor %}
 
