--- a/css/retro.css
+++ b/css/retro.css
@@ -19,3 +19,28 @@
 	margin-top: 50px;
 	text-align: center;
 }
+
+@media (max-width: 950px){
+	.retro-text{
+		font-size: 20px;
+		margin-left: 200px;
+		margin-right: 200px;
+	}
+}
+
+
+@media (max-width: 830px){
+	.retro-text{
+		font-size: 20px;
+		margin-left: 100px;
+		margin-right: 100px;
+	}
+}
+
+@media (max-width: 465px){
+	.retro-text{
+		font-size: 15px;
+		margin-left: 50px;
+		margin-right: 50px;
+	}
+}
